# rustman

./: Cargo.toml  FIXED.md  LocalServer.json  README.md  TEST_CONNECTING.md  TEST_INSTRUCTIONS.md  test_connection.json  test_dialog.txt
src/: app.rs  handlers.rs  main.rs  models.rs  ui.rs
